--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,7 @@ header{
   color: rgb(255,255,255,.8);
 }
 
+
 .select a:hover{
   color: rgb(255, 255, 255,.5);
 }
@@ -273,4 +274,11 @@ footer .copy{
   left:0;
   right:0;
   text-align: center;
+}
+
+
+
+
+@media(max-width:600px){
+
 }
