--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,21 +57,22 @@ header{
 }
 
 .menu .bar {
-     width: 20px;
-     height: 2px;
-     background: #000;
+     width: 50px;
+     height: 5px;
+     background-color:white;
      border-radius: 5px;
-     opacity: 1;
+     opacity: 5;
      visibility: visible;
      transition: 0.5s ease;
      transform-origin: left;
+     margin-right:80px;
 }
 .menu .bar1 {
-     margin-bottom: 5px;
+     margin-bottom: 10px;
 }
 
 .menu .bar3 {
-     margin-top: 5px;
+     margin-top: 10px;
 }
 
 .menu.toggle .bar1 {
@@ -351,6 +352,20 @@ footer .copy{
 
 @media(max-width:600px){
 
+  .one{
+  background-image: url("img/back-img.png");
+  background-size: cover;
+  height:120vh;
+  padding-top:80px;
+}
+
+.one h1{
+  font-size:50px;
+}
+
+
+
+
   .nav-links {
           flex-direction: column;
           position: fixed;
@@ -369,6 +384,7 @@ footer .copy{
           width: 100%;
           display: block;
         }
+       
      .menu {
           display: block;
           margin-left: auto;
@@ -383,9 +399,10 @@ footer .copy{
   }
   .one main-header h1{
   text-align: center;
-  margin-top:23vh;
-  font-size: 50px;
+  font-size: 80px;
+  margin-top:220px;
   }
+
   .two{
     width:1200px;
     margin:0 50px;
